# valjean

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  Jenkinsfile  MANIFEST.in  Makefile  README.md  README.rst  conftest.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_testing.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-release.yml  python-publish.yml
ci/: Jenkinsfile  Jenkinsfile.nightly  spack-python.sh
ci/spack-env/: README.md  new_spack_env
ci/spack-env/etc/spack/: config.yaml  modules.yaml
conda.recipe/: meta.yaml
doc/: Makefile  conf.py  depgraph.rst  getting_started.rst  index.rst  modules.rst  scheduler.rst  task.rst  tests.rst
doc/getting_started/: install.rst  prerequisites.rst
doc/modules/: cosette.rst  depgraph.rst  scheduler.rst  task.rst
doc/modules/cosette/: depgraph.rst  env.rst  scheduler.rst  task.rst
doc/src/: changelog.rst  conf.py  devs.rst  getting_started.rst  index.rst  modules.rst  tests.rst  todo.rst  what.rst
doc/src/devs/: documentation.rst  linting.rst  release_checklist.rst  sdist.rst  setup.rst  testing.rst  tox.rst
doc/src/examples/: README.md  examples.rst
doc/src/examples/livermore_exps/: comp_plots.py  livermore_exps.py  prob103_nitrogen3.1_fine_timeShifted_sphere.d  s10a11.res.mesure  spheres_example.ipynb
doc/src/examples/replica/: replica_example.ipynb
doc/src/examples/sensitivities/: sensitivity_godiva.d  sensitivity_godiva.d.res.ceav5
doc/src/examples/spherical_cows/: job.py
doc/src/getting_started/: doc.rst  exe.rst  install.rst
doc/src/modules/: cambronne.rst  cmd.rst  cosette.rst  eponine.rst  gavroche.rst  javert.rst  valjean.rst
doc/src/modules/cambronne/: common.rst  (+1 more)
tests/: conftest.py  context.py  test_code.py  test_config.py  test_data.py  test_depgraph.py  test_priority_set.py  test_scheduler.py  test_task.py
tests/cambronne/: test_main.py
tests/cosette/: conftest.py  test_code.py  test_depgraph.py  test_env.py  test_pythontask.py  test_rlist.py  test_run.py  test_scheduler.py  test_task.py  test_use.py
tests/data/: handle.cfg
tests/eponine/: conftest.py  test_accessor.py  test_all_listings.py  test_ap3_picker.py  test_ap3_reader.py  test_browser.py  test_common.py  test_dataset.py  test_parse_t4_task.py  test_parsing.py  test_parsing_v11.py  test_read_ap3_vv_hdf.py  test_response_book.py  test_scan_t4.py  test_use.py  test_using.py
tests/eponine/apollo3/: test_picker.py  test_reader.py  test_vv_hdf.py
tests/eponine/data/: AP3F_MiniCoeur_Kinetics_MINOS.hdf  ELECTRON_PHOTON_BALANCE.d  ELECTRON_PHOTON_BALANCE.d.res.ceav5  GODIVA_ifp_statistics.d  GODIVA_ifp_statistics.d.res.ceav5  Hexarot_Kinetic.hdf  Simplest_API.hdf  angle.d  cylindreDecR_with_kij_on_mesh.d  cylindreDecR_with_kij_on_mesh.d.res.ceav5  entropy.d.res.ceav5  failure_noaopt_uniform_sources.d.res  failure_test_bad_resp_name.d.res  failure_test_no_a_opt.d.res  failure_test_no_normal_completion.d.res  failure_test_no_simu_time.d.res  failure_test_no_spec_res.d.res  failure_test_segFault.d.res  gauss_time_mu_phi_E.d  pertu_covariances.d  pertu_covariances.d.res.ceav5  pu_met_fast_001_decompose_list_small.d  pu_met_fast_001_decompose_list_small.d.res.ceav5  sensitivity_godiva.d  sensitivity_godiva.d.res  ttsSimplePacket20.d.res.ceav5  vov.d.res.ceav5
tests/eponine/tripoli4/: test_common.py  test_depletion.py  test_parsing.py  test_parsing_errors.py  test_scan.py  test_use.py  test_vv_depletion.py
tests/gavroche/: conftest.py  fixtures.py  test_dataset.py  test_diagnostics.py  test_eval_test_task.py  test_gdataset.py  test_harvest.py  test_stats.py  test_test.py  test_using.py
tests/gavroche/data/: other_module.py  test_export.py  test_something.py
tests/integration/: conftest.py  test_happy_path.py  test_logger.py
tests/integration/data/: gauss_E_time_mu_phi.res.ceav5
tests/javert/: __init__.py  conftest.py  test_mpl.py  test_plot_elements.py  test_plot_repr.py  test_representation.py  test_rst.py  test_templates.py
tests/javert/plots/: __init__.py  conftest.py  test_mpl.py
valjean/: __init__.py  chrono.py  config.py  config_handlers.py  depgraph.py  dyn_import.py  fingerprint.py  path.py  priority_set.py  scheduler.py  task.py
valjean/cambronne/: common.py  main.py
valjean/cambronne/commands/: build.py  checkout.py  config.py  env.py  eval.py  graph.py  parse.py  report.py  run.py  tasks.py
valjean/cmd/: build.py  checkout.py  common.py  config.py  main.py
valjean/cmd/commands/: build.py  checkout.py  config.py  graph.py
valjean/cosette/: code.py  depgraph.py  env.py  pythontask.py  rlist.py  run.py  scheduler.py  task.py  use.py
valjean/cosette/backends/: queue.py
valjean/cosette/task/: __init__.py  code.py  task.py
valjean/eponine/: Eponine.py  accessor.py  base_dataset.py  browser.py  common.py  data_convertor.py  dataset.py  parse_t4.py  parse_t4_task.py  response_book.py  responses_book.py  scan.py  scan_t4.py  using.py
valjean/eponine/apollo3/: hdf5_picker.py  hdf5_reader.py
valjean/eponine/larkT4/: grammar_endl.g
valjean/eponine/lark_t4/: larkOnTripoli.py
valjean/eponine/pyparsingT4/: grammar.py  transform.py
valjean/eponine/pyparsing_t4/: grammar.py  transform.py
valjean/eponine/tripoli4/: accessor.py  common.py  data_convertor.py  depletion.py  dump.py  grammar.py  parse.py  parse_debug.py  parse_task.py  scan.py  transform.py  use.py
valjean/gavroche/: dataset.py  eval_test_task.py  gdataset.py  harvest.py  jddres.txt  spheresLivermore.py  test.py  using.py
valjean/gavroche/diagnostics/: metadata.py  stats.py
valjean/gavroche/stat_tests/: bonferroni.py  chi2.py  student.py
valjean/javert/: formatter.py  items.py  mpl.py  plot_elements.py  plot_repr.py  representation.py  rst.py  table_elements.py  table_repr.py  templates.py  test_external.py  test_report.py  verbosity.py
valjean/mes_tests/: .gitignore  accessor.py  detector_responses.py  ideal_spheresLivermore.py  run_spheres.py  source_description.py  spheresLivermore.py
valjean/task/: code.py  task.py
velvet/: __init__.py  depgraph.py  scheduler.py  task.py
(+141 files in other folders)
